<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserInputFragment">

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/frameL_height"
            android:layout_marginStart="@dimen/frameL_marginStart"
            android:layout_marginEnd="@dimen/frameL_marginEnd"
            android:layout_marginBottom="@dimen/frameL_marginBottom"
            android:background="@drawable/blue_bg"
            app:layout_constraintBottom_toTopOf="@+id/buttonValidate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bluebg_marginTop"
                android:layout_marginBottom="@dimen/bluebg_marginBottom"
                android:visibility="gone"
                android:layout_gravity="center" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/userformTV_marginTop"
            android:fontFamily="@string/userformTV_fontFamily"
            android:text="@string/tv_userform"
            android:textSize="@dimen/userformTV_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usernameET_marginTop"
            android:layout_marginEnd="@dimen/usernameET_marginEnd"
            android:layout_marginStart="@dimen/usernameET_marginStart"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:tag="@string/usernameET_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/emailET_marginTop"
            android:layout_marginEnd="@dimen/emailET_marginEnd"
            android:layout_marginStart="@dimen/emailET_marginStart"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:tag="@string/emailET_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/phoneET_marginTop"
            android:layout_marginEnd="@dimen/phoneET_marginEnd"
            android:layout_marginStart="@dimen/phoneET_marginStart"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:tag="@string/phoneET_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextViewPincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pincodeET_marginTop"
            android:layout_marginEnd="@dimen/phoneET_marginEnd"
            android:layout_marginStart="@dimen/phoneET_marginStart"
            android:hint="@string/pincode_hint"
            android:inputType="number"
            android:tag="@string/pincodeET_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/addressET_marginTop"
            android:layout_marginEnd="@dimen/addressET_marginEnd"
            android:layout_marginStart="@dimen/addressET_marginStart"
            android:hint="@string/address_hint"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:tag="@string/addressET_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/buttonValidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/validateButton_padStart"
            android:paddingEnd="@dimen/validateButton_padEnd"
            android:layout_marginEnd="@dimen/validateButton_marginEnd"
            android:layout_marginStart="@dimen/validateButton_marginStart"
            android:layout_marginTop="@dimen/validateButton_marginTop"
            android:text="@string/button_validate"
            android:textSize="@dimen/validateButton_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cancelButton_margin"
                android:text="@string/button_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/confirmButton_margin"
                android:text="@string/button_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>